# autotests-ui

./: conftest.py  playwright_authorization.py  playwright_courses.py  playwright_registration_button.py  pyproject.toml  pytest.ini
components/authentication/: login_form_component.py  registration_form_component.py
components/charts/: chart_view_component.py
components/courses/: course_view_component.py  course_view_menu_component.py  courses_list_toolbar_view_component.py  create_course_exercise_form_component.py  create_course_exercises_toolbar_view_component.py  create_course_form_component.py  create_course_toolbar_view_component.py
components/dashboard/: dashboard_toolbar_view_component.py
components/navigation/: navbar_component.py  sidebar_list_item_component.py
components/views/: empty_view_component.py  image_upload_widget_component.py
elements/: README.md  base_element.py  button.py  file_input.py  icon.py  image.py  input.py  link.py  text.py  textarea.py
fixtures/: browser.py  pages.py
pages/: BasePage.py  DashboardPage.py  LoginPage.py  RegistrationPage.py  base_page.py  courses_list_page.py  create_course_page.py  dashboard_page.py  login_page.py  registration_page.py
pages/authentication/: login_page.py  registration_page.py
pages/courses/: courses_list_page.py
pages/dashboard/: dashboard_page.py
tests/: conftest.py  test_authorization.py  test_courses.py  test_dashboard.py  test_registration.py
tests/authentication/: test_authorization.py  test_registration.py
tests/courses/: test_courses.py
tests/dashboard/: test_dashboard.py
