[project]

name = "autotests-ui"
version = "0.1.0"
description = ""
authors = [
    {name = "HelHitch",email = "olena9002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff (>=0.12.3,<0.13.0)",
    "playwright (>=1.53.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-playwright (>=0.7.0,<0.8.0)",
    "pytest-rerunfailures (>=15.1,<16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]

[tool.ruff.format]
quote-style = "double"

indent-style = "tab"
line-ending = "auto"



